# nomercy

./: .gitignore  FIX_INDEX_INSTRUCTIONS.md  GAME_MODE_RULES_README.md  IMPLEMENTATION_COMPLETE.md  LADDER_REWARDS_UPDATE.md  QUICK_START_GAME_MODE_RULES.md  RANKED_MATCH_REPORT.md  RANKED_REWARDS_SYSTEM.md  TESTS_CHECKLIST.md  package-lock.json
Client/: .env.development  .env.production  NoMercy.lnk  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Client/dev-dist/: sw.js
Client/src/: App.jsx  AudioProvider.jsx  AuthContext.jsx  DataContext.jsx  LanguageContext.jsx  ModeContext.jsx  SocketContext.jsx  config.js  index.css  main.jsx  translations.js
Client/src/components/: AnnouncementModal.jsx  AvatarWithOrnament.jsx  BanDialog.jsx  CookieConsent.jsx  Dialog.jsx  Footer.jsx  GameModeRulesEditor.jsx  GlobalAlerts.jsx  HelperConfirmationDialog.jsx  LadderMatchReport.jsx  Navbar.jsx  PWAInstallPrompt.jsx  PageTransition.jsx  ProfileAnimation.jsx  RankedMatchReport.jsx  ScrollToTop.jsx  SpinWheel.jsx  StrickerMatchReport.jsx
Client/src/pages/: AdminPanel.jsx  AllSquads.jsx  Anticheat.jsx  CDLDashboard.jsx  CDLDashboard_new.jsx  GameModeRules.jsx  Games.jsx  HardcoreDashboard.jsx  Home.jsx  IrisAuthorize.jsx  IrisCallback.jsx  IrisTermsOfUse.jsx  JoinSquad.jsx  LadderRules.jsx  LandingPage.jsx  MatchSheet.jsx  Messages.jsx  ModeSelection.jsx  MyDisputes.jsx  MyProfile.jsx  MyPurchases.jsx  MySquad.jsx  PlayerProfile.jsx  PrivacyPolicy.jsx  RankedMatchSheet.jsx  RankedMode.jsx  Rankings.jsx  RankingsInfo.jsx  (+14 more)
Client2/: index.html  package-lock.json  package.json  tailwind.config.js
Client2/src/: App.jsx  config.js  index.css  main.jsx
Iris/: .gitignore  package-lock.json  package.json
Iris/src/: index.html  main.js  preload.js
IrisTauri/: package-lock.json  package.json
IrisTauri/src-tauri/: Cargo.toml  build.bat  tauri.conf.json
IrisTauri/src-tauri/capabilities/: default.json
IrisTauri/src-tauri/src/: api.rs  behavioral.rs  commands.rs  hardware.rs  main.rs  store.rs  updater.rs
IrisTauri/ui/: index.html
Server/: package-lock.json  package.json
Server/scripts/: add-default-squad-rank.js  check-ge-matches.js  check-golden-eagles.js  check-rankings.js  diagnose-matches.js  diagnose-ranked-matches.js  diagnose-stricker-leaderboard.js  disable-maintenance.js  fix-all-squads-stricker-stats.js  fix-cdl-stats.js  fix-gamemoderules-index.js  fix-ge-stats.js  fix-match-history.js  fix-player-match-history.js  fix-ranked-match-stats.js  fix-ranked-victories.js  fix-stricker-winner.js  fix-trophy-names.js  inspect-stricker-match.js  migrate-ladder-rewards.js  migrate-ranked-season2.js  migrate-squad-stats.js  migrate-stricker-rules.js  migrate-stricker-top-squad-points.js  migrate-tournament-maps.js  migrate-user-stats.js  recalculate-player-stats.js  recalculate-ranked-season.js  seed-game-modes.js  seed-profile-animations.js  seed-shop-titles.js  seed-stricker-ranked-items.js  seed-usable-items.js  test-match-history.js
Server/src/: index.js
(+123 files in other folders)
