[package]
name = "iris-anticheat"
version = "1.0.0"
description = "Iris Anticheat - NoMercy Security System"
authors = ["NoMercy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-close", "window-minimize", "window-start-dragging", "window-show", "window-set-focus", "window-hide", "system-tray", "shell-open", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }
keyring = "2"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
base64 = "0.21"
lazy_static = "1.4"
open = "5"
urlencoding = "2"
image = "0.24"

# Windows-specific dependencies for hardware checks
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging"
] }
wmi = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
