[package]
name = "iris-anticheat"
version = "1.0.4"
description = "Iris Anticheat - NoMercy Security System"
authors = ["NoMercy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }
keyring = "2"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
base64 = "0.21"
lazy_static = "1.4"
open = "5"
urlencoding = "2"
image = "0.24"
semver = "1.0"
obfstr = "0.4"

# Windows-specific dependencies for hardware checks
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
wmi = "0.13"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
